src/themes/quiet.css
/* ... */
/*//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
//  Light mode colors
//
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/

:root,
:host,
.quiet-light {
  color-scheme: light;

  --quiet-silent: white;
  --quiet-strident: black;
  --quiet-background-color: white;
  --quiet-raised-background-color: white;
  --quiet-body-color: var(--quiet-neutral-900);
  --quiet-body-color-muted: var(--quiet-neutral-colored-text);
  --quiet-focus-color: var(--quiet-primary-fill-moderate);
  --quiet-focus-ring: var(--quiet-border-style) var(--quiet-focus-width) var(--quiet-focus-color);
  --quiet-backdrop-color: rgba(0 0 0 / 0.25);
  --quiet-selection-background-color: var(--quiet-primary-300);
  --quiet-shadow-color: black;
  --quiet-shadow-softer: 0 1px 2px color-mix(in oklab, transparent, var(--quiet-shadow-color) 4%);
  --quiet-shadow-moderate: 0 4px 8px color-mix(in oklab, transparent, var(--quiet-shadow-color) 6%);
  --quiet-shadow-loud: 0 8px 16px color-mix(in oklab, transparent, var(--quiet-shadow-color) 8%);

  /* Primary */
  --quiet-primary-fill-softer: var(--quiet-primary-100);
  --quiet-primary-fill-soft: var(--quiet-primary-200);
  --quiet-primary-fill-moderate: var(--quiet-primary-600);
  --quiet-primary-fill-loud: var(--quiet-primary-800);
  --quiet-primary-fill-louder: var(--quiet-primary-900);
  --quiet-primary-fill-text-softer: var(--quiet-primary-900);
  --quiet-primary-fill-text-soft: var(--quiet-primary-900);
  --quiet-primary-fill-text-moderate: white;
  --quiet-primary-fill-text-loud: white;
  --quiet-primary-fill-text-louder: white;
  --quiet-primary-colored-text: color-mix(in oklab, var(--quiet-primary-600), black 7.5%);
  --quiet-primary-stroke-softer: var(--quiet-primary-200);
  --quiet-primary-stroke-soft: var(--quiet-primary-300);

  /* Secondary */
  --quiet-neutral-fill-softer: var(--quiet-neutral-100);
  --quiet-neutral-fill-soft: var(--quiet-neutral-200);
  --quiet-neutral-fill-moderate: var(--quiet-neutral-600);
  --quiet-neutral-fill-loud: var(--quiet-neutral-800);
  --quiet-neutral-fill-louder: var(--quiet-neutral-900);
  --quiet-neutral-fill-text-softer: var(--quiet-neutral-900);
  --quiet-neutral-fill-text-soft: var(--quiet-neutral-900);
  --quiet-neutral-fill-text-moderate: white;
  --quiet-neutral-fill-text-loud: white;
  --quiet-neutral-fill-text-louder: white;
  --quiet-neutral-colored-text: color-mix(in oklab, var(--quiet-neutral-600), black 7.5%);
  --quiet-neutral-stroke-softer: var(--quiet-neutral-200);
  --quiet-neutral-stroke-soft: var(--quiet-neutral-300);

  /* Confirmative */
  --quiet-confirmative-fill-softer: var(--quiet-confirmative-100);
  --quiet-confirmative-fill-soft: var(--quiet-confirmative-200);
  --quiet-confirmative-fill-moderate: var(--quiet-confirmative-600);
  --quiet-confirmative-fill-loud: var(--quiet-confirmative-800);
  --quiet-confirmative-fill-louder: var(--quiet-confirmative-900);
  --quiet-confirmative-fill-text-softer: var(--quiet-confirmative-900);
  --quiet-confirmative-fill-text-soft: var(--quiet-confirmative-900);
  --quiet-confirmative-fill-text-moderate: white;
  --quiet-confirmative-fill-text-loud: white;
  --quiet-confirmative-fill-text-louder: white;
  --quiet-confirmative-colored-text: color-mix(in oklab, var(--quiet-confirmative-600), black 7.5%);
  --quiet-confirmative-stroke-softer: var(--quiet-confirmative-200);
  --quiet-confirmative-stroke-soft: var(--quiet-confirmative-300);

  /* Destructive */
  --quiet-destructive-fill-softer: var(--quiet-destructive-100);
  --quiet-destructive-fill-soft: var(--quiet-destructive-200);
  --quiet-destructive-fill-moderate: var(--quiet-destructive-600);
  --quiet-destructive-fill-loud: var(--quiet-destructive-800);
  --quiet-destructive-fill-louder: var(--quiet-destructive-900);
  --quiet-destructive-fill-text-softer: var(--quiet-destructive-900);
  --quiet-destructive-fill-text-soft: var(--quiet-destructive-900);
  --quiet-destructive-fill-text-moderate: white;
  --quiet-destructive-fill-text-loud: white;
  --quiet-destructive-fill-text-louder: white;
  --quiet-destructive-colored-text: color-mix(in oklab, var(--quiet-destructive-600), black 7.5%);
  --quiet-destructive-stroke-softer: var(--quiet-destructive-200);
  --quiet-destructive-stroke-soft: var(--quiet-destructive-300);
}
/* ... */

